# oac-slack-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PLAN.md  entrypoint.sh  mcp-servers.json  pyproject.toml
src/: config.rs  lib.rs  main.rs  metrics.rs
src/claude/: auth.rs  client.rs  mod.rs  session.rs  types.rs
src/oac_slack_bot/: __init__.py  __main__.py  app.py  config.py  metrics.py
src/oac_slack_bot/claude/: auth.py  client.py  session.py  types.py
src/oac_slack_bot/guardrails/: __init__.py  audit_logger.py  channel_whitelist.py  cost_tracker.py  injection_detector.py  input_validator.py  output_filter.py  pii_redactor.py  rate_limiter.py  result.py
src/oac_slack_bot/plugins/: executor.py  registry.py  router.py
src/oac_slack_bot/slack/: client.py  events.py  format.py  streamer.py  types.py
src/plugins/: executor.rs  mod.rs  registry.rs  router.rs
src/slack/: client.rs  events.rs  format.rs  mod.rs  socket.rs  streamer.rs  types.rs
tests/: registry_integration.rs  router_integration.rs  session_test.rs  test_events.py  test_format.py  test_metrics.py  test_registry.py  test_router.py  test_session.py  types_test.rs
tests/test_guardrails/: test_injection_detector.py  test_input_validator.py  test_pii_redactor.py  test_rate_limiter.py
